2011-06-30  Marek Polacek  <mpolacek@redhat.com>

	* iconvdata/johab.c: Don't inline `johab_sym_hanja_to_ucs' function.

2011-06-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/s390/s390-64/Makefile ($(inst_gconvdir)/gconv-modules):
	Copy rule from iconvdata/Makefile.

2011-07-06  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12922]
	* posix/getopt.c (_getopt_internal_r): When "W;" is in short options
	but no long options are defined, just return 'W'.

2011-06-22  Marek Polacek  <mpolacek@redhat.com>

	[BZ #9696]
	* stdlib/strtod_l.c (round_and_return): Set ERANGE instead of EDOM.

2011-07-06  Ulrich Drepper  <drepper@gmail.com>

	* inet/getnetgrent_r.c (internal_getnetgrent_r): Fix check for known
	netgroups to read.
	(innetgr): Likewise.

2011-07-05  Roland McGrath  <roland@hack.frob.com>

	* config.make.in (install_root): Default to $(DESTDIR).

2011-07-05  Ulrich Drepper  <drepper@gmail.com>

	* nscd/nscd_getserv_r.c (nscd_getserv_r): Add cast to avoid warning.

2011-07-02  Roland McGrath  <roland@hack.frob.com>

	* Makerules ($(common-objpfx)format.lds): Fail if result is empty.

	* Makefile ($(common-objpfx)testrun.sh): Generate to work relative to
	containing directory rather than embedding absolute directory names.

	* scripts/check-local-headers.sh: Rewritten using awk.
	Match by word, not by line.  Print error messages for matches.
	* Makefile ($(objpfx)check-local-headers.out): Pass AWK in to it.

	* Makerules [shlib-lds-flags empty]:
	($(common-objpfx)libc_pic.opts): New target.
	($(common-objpfx)libc_pic.os.clean): New target.
	($(common-objpfx)libc.so): Link it instead of libc_pic.os.

	* config.make.in (OBJCOPY): New variable.
	* aclocal.m4 (LIBC_PROG_BINUTILS): Substitute OBJCOPY too.
	* configure: Regenerated.

	* config.make.in (use-default-link): New variable.
	* configure.in (use_default_link): Grok --with-default-link to set it.
	* configure: Regenerated.
	* Makerules [$(elf) = yes] [$(use-default-link) = yes]: